k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whistleblower
  labels:
    name: whistleblower
    app: wb-api
