k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wb-api-service
  namespace: whistleblower
spec:
  type: LoadBalancer
  selector:
    app: wb-api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  # Uncomment for NodePort instead of LoadBalancer
  # type: NodePort
  # ports:
  # - port: 8080
  #   targetPort: 8080
  #   nodePort: 30080
  #   protocol: TCP
